# cexoms

./: .gitignore  CLAUDE.md  CLIENT_GUIDE.md  CONTEXT.md  Makefile  PROGRESS.md  README.md  TEST_GUIDE.md  WINDOWS_CLIENT_GUIDE.md  WORK_LOG_2025-08-19.md  WORK_LOG_2025-08-20.md  WORK_LOG_2025-08-21.md  WORK_LOG_2025-08-21_COMPLETE.md  docker-compose.yml  fix-imports.sh  go.mod  oms-guid.md  oms-guide-bacup.md  test-futures-trading.go  test-risk-management.go  test-ws-simple.go  test-ws-trading.go
benchmark/: README.md  decimal_benchmark_test.go  market_data_benchmark_test.go  order_benchmark_test.go  risk_benchmark_test.go  router_benchmark_test.go
clients/javascript/: oms-client.js
clients/python/: oms_client.py
clients/windows/: build.bat  oms-client.py  requirements.txt
cmd/backtest/: main.go
cmd/benchmark/: main.go
cmd/binance-futures/: main.go
cmd/binance-spot/: main.go
cmd/grpc-client/: main.go
cmd/grpc-gateway/: main.go
cmd/keymanager-example/: main.go
cmd/market-data/: main.go
cmd/marketdata-service/: main.go
cmd/monitor/: main.go
cmd/oms-client/: main.go
cmd/oms-server/: main.go
cmd/rest-server/: main.go
cmd/simple-ticker/: main.go
cmd/storage-example/: main.go
cmd/test-binance/: main.go
cmd/test-futures/: main.go
cmd/test-grpc/: main.go
cmd/test-position/: main.go
cmd/test-risk/: main.go
cmd/test-router/: main.go
cmd/test-security/: main.go
cmd/test-trading/: main.go
cmd/test-vault-integration/: main.go
cmd/test-vault-simple/: main.go
cmd/test-ws-order/: main.go
cmd/vault-cli/: main.go
cmd/websocket-ticker/: main.go
configs/: accounts.yaml  asset_management.yaml  backtest.json  config.yaml  position_management.yaml  risk_management.yaml  strategies.yaml
core/: CMakeLists.txt
core/engine/: main.cpp  order_manager.cpp
core/include/: order_manager.h  ring_buffer.h  types.h
core/include/risk/: risk_engine.h
core/include/strategies/: arbitrage_detector.h  market_maker.h
core/src/: main.cpp
core/src/risk/: risk_engine.cpp
core/src/strategies/: arbitrage_detector.cpp  market_maker.cpp
core/tests/: test_risk_engine  test_risk_engine.cpp
deployments/docker/: Dockerfile.engine  Dockerfile.services  docker-compose.yml
deployments/docs/: cpu-allocation.md  production-guide.md
deployments/scripts/: install.sh  monitor.sh  uninstall.sh
deployments/systemd/: nats.service  oms-binance-spot.service  oms-engine.service  oms-grpc-gateway.service
docs/: 2025-08-20-websocket-implementation.md  2025-08-20-work-log.md  2025-08-21-continuation-guide.md  adding-exchanges.md  backtest-guide.md  framework-analysis-and-strategy.md  grpc-api.md  monitoring.md  testing-guide.md
internal/account/: manager.go  rebalancer.go  router.go  transfer_manager.go
internal/backtest/: analyzer.go  data_provider.go  engine.go  event_store.go  example_test.go  performance_analyzer.go  strategy.go  strategy_adapter.go  types.go
internal/exchange/: base.go  factory.go  manager.go
internal/grpc/: auth_service.go  middleware.go  order_service.go  position_service.go
internal/keymanager/: audit.go  emergency.go  manager.go  rotation.go  types.go  usage_tracker.go  vault_client.go
internal/marketdata/: aggregator.go
internal/monitor/: dashboard.go  health.go  logger.go  metrics.go
internal/position/: manager.go  multi_account_manager.go  optimizer.go
internal/risk/: calculator.go  engine.go  engine.go.bak  limits.go  manager.go  manager_test.go  monitor.go  multi_account_manager.go  risk_aggregator.go  stop_loss.go  var_calculator.go
internal/router/: execution_engine.go  fee_optimizer.go  liquidity_aggregator.go  order_splitter.go  performance_tracker.go  router.go  router_test.go  routing_engine.go  slippage_protector.go  smart_router.go  smart_router_multi_account.go  types.go  worker_pool.go
internal/storage/: cleaner.go  manager.go  query_utils.go  reader.go  types.go  writer.go
pkg/cache/: memory_cache.go  memory_cache_test.go  rate_limiter.go  session_manager.go
pkg/nats/: client.go  messages.go  subjects.go
pkg/security/: encryption.go  file_store.go  keystore.go  security_test.go  vault_client.go
proto/: oms.pb.go  oms.proto  oms_grpc.pb.go
scripts/: benchmark.sh  generate-exchange.go  monitor-web.py  monitor.sh  run-all.sh  run-benchmarks.sh  setup-vault.sh  stop-all.sh  store-binance-keys.sh  test-services.sh  vault-add-keys.sh  vault-rotate-keys.sh  vault-setup.sh
test/: nats_connection.go  redis_connection.go
tests/: integration_test.sh
(+86 files in other folders)
